# ahocorasick_rs

./: .dir-locals.el  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  justfile  pyproject.toml  requirements-dev.txt  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: main.yml
.hypothesis/examples/1d47f825b95ef0c4/: 106f0f267bad0256
.hypothesis/examples/2813a5e94c6b3fc8/: 35ad336a2a6fdfd2
.hypothesis/examples/4b6d35316b9dfb2c/: 3192aedc13e9fb94  69dca6a561a1acfd  85c0272697d6fd5e  b1d05b1a4f5d57d8
.hypothesis/examples/532a94be90c9efd0/: b8231a7f06bee7f9  de2f4e902ceb702d  ffd3c03363776c1f
.hypothesis/examples/55c0f1b47133aa5d/: 20a2763cdf3874b1  576822a319690cfa
.hypothesis/examples/5841fbe83c75a177/: 96784e8d40b82570  975b2cb9b044b541
.hypothesis/examples/610f0d49a7f18187/: 015ec5d979c41511  085f80daee6d089f  93fd353b208e5ead
.hypothesis/examples/685581859d09127c/: b9fc09fff40c6832
.hypothesis/examples/8b486cb1c1c9d7c3/: 03dbd1ea1be639b7  1fd86b90f6bbea95  257652cbe85ac09a  27b9d366cd0f55da  2c81b700510fb88e  3e88606e87e29819  42cc1e1b7ee552b3  4dbdf3ffa933d826  5ffd6c3d14f086fd  706826b5897c8f21  804d8ecdedfea816  93f9de22a832f630  9af922df7ed31887  a72db87782dbdd7c  aa9286fee73e0130  b105d4471d0d7757  c8e87fefbd74d073  e154e84c6030c3e3  f3250b332e873f95  fa791b5038e8176b  fc8970907eab2821
.hypothesis/examples/8c20b63c7c3ee2a0/: 2f5427605d3e198d
.hypothesis/examples/95fbd6c8090ecb40/: dc11c3cd8814f97f
.hypothesis/examples/a9e8fc16f19e74e6/: 7ef3a58363360a70
.hypothesis/examples/aa9db1092bd86c43/: b7cf276e1892438c
.hypothesis/examples/bd21ccfc302af764/: 0177d68629a250d2  01b54b15d9a07068  03956bbc3766c954  067eba0845c322e4  07d30c4eb84ebd4e  07f796be4f588af3  0c43396e134ee9fb  0d29ef12eefcf809  0d4e798748e5cc8e  0e9ec5dff9307e96  0f1f15f5b8ede345  0fb431a3c544ce84  126987fc98ea6e11  16bc7c33ee123306  1896ddab0028d900  1a888029a24ea0f0  1cd994246de2482e  21187f3d9d4b4e29  2560057989e08e69  25f44600c94a1487  268ad355294bc47b  271adeb1379d1cae  27e801a6bd73ddbe  28c2c60b60d80c44  28e06a4cfa0bb44c  2976ddfed56ce9e7  2a5a1e5c2bd5cc58  2a6aa56b7749c0d6  2c10a3d4638d385a  2d136aae1b5d8d24  2d682aea966ca604  2e7e15be1985078b  2f4b5fc09b1f86f1  374834a15b44218b  3b2cea508b34bb08  3baeb1956c34aee1  3d962243d92efbc7  3e1c0348fea72710  3fd6662bdecdecbd  41ab07b2a9d8d1a9  (+130 more)
.hypothesis/examples/bfe2da22a2bb6466/: 3d12246dfa6c2702  bb557a3de7bf606a
.hypothesis/examples/d467e571ca193666/: 9c37882aff0161aa
.hypothesis/examples/e953ba62a83b57b1/: b4ab46136f8a7c2c
.hypothesis/examples/ea046fba42e7e6df/: 5d0ee50bbc9e81ca
.hypothesis/examples/f110168263c9473c/: 0d491ebeb6bcc34b
benchmarks/: names.txt  test_batch.py  test_comparison.py
pysrc/ahocorasick_rs/: __init__.py  ahocorasick_rs.pyi
src/: lib.rs
tests/: test_ac.py  test_ac_bytes.py
