[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ahocorasick_rs"
requires-python = ">=3.8"
dependencies = [
    # Technically not necessary to run, only needed for type checking...
    "typing_extensions >= 4.6.0 ; python_version < '3.12'"
]

[tool.maturin]
python-source = "pysrc/"