[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ahocorasick_rs"
requires-python = ">=3.10"
description = "Search for multiple substrings at the same time, and quickly too"
dependencies = [
    # Technically not necessary to run, only needed for type checking...
    "typing_extensions >= 4.6.0 ; python_version < '3.12'"
]
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version", "license", "home_page", "project_url"]

[tool.maturin]
python-source = "pysrc/"